--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:test-spartacus-hyd123": "node dist/test-spartacus-hyd123/server/server.mjs",
-    "build:ssr": "ng build"
+    "serve:ssr:test-spartacus-hyd123": "NODE_TLS_REJECT_UNAUTHORIZED=0 node dist/test-spartacus-hyd123/server/server.mjs",
+    "build:ssr": "ng build",
+    "dev:hydration": "ng serve --port 4200",
+    "build:hydration": "ng build",
+    "serve:hydration": "npm run build:hydration && npm run serve:ssr:test-spartacus-hyd123"
   },
   "private": true,
   "dependencies": {
